--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,3 @@
-/******************************************************************************
-START Glitch hello-app default styles
-
-The styles in this section do some minimal CSS resets, set default fonts and 
-colors, and handle the layout for our footer and "Remix on Glitch" button. If
-you're new to CSS they may seem a little complicated, but you can scroll down
-to this section's matching END comment to see page-specific styles.
-******************************************************************************/
-
-/* 
-  The style rules specify elements by type and by attributes such as class and ID
-  Each section indicates an element or elements, then lists the style properties to apply
-  See if you can cross-reference the rules in this file with the elements in index.html
-*/
-
-/* Import fonts */
-/* @font-face {
-  font-family: HK Grotesk;
-  src: url("https://cdn.glitch.me/605e2a51-d45f-4d87-a285-9410ad350515%2FHKGrotesk-Regular.otf?v=1603136326027") format("opentype");
-} */
-
-/* Other styles below */
 :root {
   --variable-name: 10px;
   /* font-size: var(--variable-name); */
@@ -27,13 +5,38 @@ to this section's matching END comment to see page-specific styles.
 
 body {
   font-family: system-ui, -apple-system, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   line-height: 1.5;
   margin: 2rem;
   padding: 0 1rem;
+  height: 100vh;
 }
 
-.sidebar {
-  float: right;
-  margin-left: 30px;
-  width: 40%;
+/* Header & Footer styles */
+.header {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+  column-gap: 4rem;
+  padding: 1rem 0;
+  background-color: var(--color-header);
+  color: var(--color-text-light);
+}
+
+.header h1 {
+  font-size: 1.5rem;
+}
+
+.nav-horizontal {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: right;
+  gap: 1rem;
+}
+
+.hidden {
+  display: none;
 }
