--- a/src/styles/map.css
+++ b/src/styles/map.css
@@ -1,42 +1,10 @@
-:root {
-  --variable-name: 10px;
-  /* font-size: var(--variable-name); */
-}
-
-body {
-  font-family: system-ui, -apple-system, sans-serif;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  line-height: 1.5;
-  margin: 2rem;
-  padding: 0 1rem;
-  height: 100vh;
-}
-
-/* Header & Footer styles */
-.header {
+.controls-wrapper {
   display: flex;
   flex-flow: row nowrap;
-  align-items: center;
-  justify-content: space-between;
-  column-gap: 4rem;
-  padding: 1rem 0;
-  background-color: var(--color-header);
-  color: var(--color-text-light);
-}
-
-.header h1 {
-  font-size: 1.5rem;
-}
-
-.nav-horizontal {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: right;
-  gap: 1rem;
-}
-
-.hidden {
-  display: none;
+  max-width: fit-content;
+  background-color: white;
+  color: var(--color-text-dark);
+  border-radius: var(--border-radius);
+  gap: 2rem;
+  padding: 1rem;
 }
