--- a/src/styles.css
+++ b/src/styles.css
@@ -52,6 +52,7 @@ button:hover {
   background-color: #333;
 }
 .btn-dark.selected {
+  pointer-events: none;
   background-color: var(--color-background);
 }
 
