--- a/src/styles/stations.css
+++ b/src/styles/stations.css
@@ -5,3 +5,10 @@
 .board-target {
   margin: 0 0 2rem 0;
 }
+
+.station-label {
+  margin: 1rem 0;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  align-self: flex-end;
+}
