--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,7 @@ main {
 
 button {
   background-color: white;
+  color: var(--color-text-dark);
   border-radius: var(--border-radius);
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
@@ -116,5 +117,13 @@ header h1 {
 /*         OTHER STYLES       */
 /* ========================== */
 
-@media screen and (max-width: 668px) {
+/* TODO: make responsive */
+@media screen and (max-width: 768px) {
+  header h1 {
+    font-size: 1.25rem;
+  }
+
+  button {
+    font-size: 1rem;
+  }
 }
