--- a/src/styles/stations.css
+++ b/src/styles/stations.css
@@ -12,3 +12,13 @@
   text-transform: uppercase;
   align-self: flex-end;
 }
+
+@media screen and (max-width: 668px) {
+  .board-target {
+    margin: 0 0 0.5rem 0;
+  }
+
+  .station-label {
+    font-size: 1rem;
+  }
+}
