--- a/src/styles.css
+++ b/src/styles.css
@@ -25,18 +25,25 @@ body {
   font-family: "Helvetica Neue", -apple-system, sans-serif;
   color: var(--color-text-light);
   background-color: var(--color-background);
-  margin: 0;
-  padding: 2rem;
-  height: 100vh;
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  margin: 0;
+}
+
+.app-wrapper {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  width: 100vw;
+  flex: 1;
+  box-sizing: border-box;
 }
 
 main {
-  display: flex;
-  flex-flow: column;
-  padding: 0;
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 button {
@@ -117,13 +124,17 @@ header h1 {
 /*         OTHER STYLES       */
 /* ========================== */
 
-/* TODO: make responsive */
 @media screen and (max-width: 768px) {
   header h1 {
     font-size: 1.25rem;
   }
 
+  .app-wrapper {
+    padding: 1rem;
+  }
+
   button {
     font-size: 1rem;
+    padding: 0.4rem 0.8rem;
   }
 }
